2014-03-22  polarnik  <owasp@ya.ru>

	* isblTest.sln: В решение добавлены проекты TestEditor и ICSharpCode.TextEditor. Функциональность ICSharpCode.TextEditor пока не используется в isblTest, но планируется её использование.

2014-03-09  polarnik  <owasp@ya.ru>

	* Program.cs:
	* MainForm.cs: 

2014-03-09  polarnik  <owasp@ya.ru>

	* Program.cs:
	* MainForm.cs:
	* isblTest.sln:
	* StyleCop.Cache:
	* isblTest.userprefs:
	* isblTest.usertasks:
	* Resources.resources: 
