@@ -1,3 +1,7 @@
+2014-03-25  polarnik  <owasp@ya.ru>
+
+	* Tree.cs: Добавлено свойство узла дерева isVisible, значение по умолчанию == true.
+
 2014-03-09  polarnik  <owasp@ya.ru>
 
 	* Tree.cs: 
